# oc-fraction

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md
benchmark/: sample.cpp
include/computoc/: fraction.h
include/math/core/: fraction.h
include/oc/: fraction.h
include/sample/: sample.h
include/samplelib/: sample.h
src/samplelib/: sample.cpp
test/: fraction.cpp
test/computoc/: fraction.cpp
tests/: fraction.cpp  sample.cpp
